syntax = "proto3";

package proto;

option java_package = "com.hedera.hcs.sxc.proto";
option java_multiple_files = true;

message AccountID {
    int64 shardNum = 1; //The shard number (nonnegative)
    int64 realmNum = 2; //The realm number (nonnegative)
    int64 accountNum = 3; //A nonnegative account number unique within its realm
}

message TopicID {
    int64 shardNum = 1; //The shard number (nonnegative)
    int64 realmNum = 2; //The realm number (nonnegative)
    int64 topicNum = 3; //A nonnegative topic number unique within its realm
}

message Timestamp {
    int64 seconds = 1; // Number of complete seconds since the start of the epoch
    int32 nanos = 2; // Number of nanoseconds since the start of the last second
}

message ApplicationMessageID {
    Timestamp validStart = 1; 
    AccountID accountID = 2; //The Account ID that paid for this transaction
}



// a complete message containing data provided by an app to the core component
message ApplicationMessage {
    ApplicationMessageID applicationMessageId = 1;
    bytes businessProcessMessage = 2;  // the payload
    bytes businessProcessHash = 3;
    bytes businessProcessSignature = 4;
    Timestamp consensusTimestamp = 5; // consensus time stamp of last chunk received
    bytes runningHash = 6;// running hash of last chunk
    TopicID topicId = 7;
    int64 sequenceNumber = 8;
}

// parts of a complete message
message ApplicationMessageChunk {
    ApplicationMessageID applicationMessageId = 1;
    int32 chunksCount = 2; // The total number of parts to make up a complete message
    int32 chunkIndex = 3; // This message part index
    bytes messageChunk = 4; // The message part
}

message KeyRotationInitialise{
    bytes initiatorPublicKeyEncoded = 1;
}

message KeyRotationRespond {
    bytes responderPublicKeyEncoded = 1;
}